// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wpp-pagination-select renders component 1`] = `
<wpp-pagination-select active-page-number="1" class="pagination-select-wrapper wpp-pagination-select" exportparts="icon-left, page-select, page-item, page-numeric, input, divider, total, icon-right">
  <mock:shadow-root>
    <wpp-icon-chevron class="disabled icon-start idle" part="icon-left" tabindex="-1"></wpp-icon-chevron>
    <div class="page-numeric" part="page-numeric">
      <input class="idle input-page" part="input" type="number" value="1">
      <wpp-divider part="divider"></wpp-divider>
      <div class="total-pages" part="total"></div>
    </div>
    <wpp-icon-chevron class="icon-end idle" part="icon-right" tabindex="0"></wpp-icon-chevron>
  </mock:shadow-root>
</wpp-pagination-select>
`;

exports[`wpp-pagination-select renders component with 8 pages and active page 2 1`] = `
<wpp-pagination-select active-page-number="1" activepagenumber="{2}" class="pagination-select-wrapper wpp-pagination-select" count="{8}" exportparts="icon-left, page-select, page-item, page-numeric, input, divider, total, icon-right">
  <mock:shadow-root>
    <wpp-icon-chevron class="disabled icon-start idle" part="icon-left" tabindex="-1"></wpp-icon-chevron>
    <div class="page-numeric" part="page-numeric">
      <input class="idle input-page" part="input" type="number" value="1">
      <wpp-divider part="divider"></wpp-divider>
      <div class="total-pages" part="total">
        NaN
      </div>
    </div>
    <wpp-icon-chevron class="icon-end idle" part="icon-right" tabindex="0"></wpp-icon-chevron>
  </mock:shadow-root>
</wpp-pagination-select>
`;

exports[`wpp-pagination-select renders component with 10 pages 1`] = `
<wpp-pagination-select active-page-number="1" class="pagination-select-wrapper wpp-pagination-select" count="{10}" exportparts="icon-left, page-select, page-item, page-numeric, input, divider, total, icon-right">
  <mock:shadow-root>
    <wpp-icon-chevron class="disabled icon-start idle" part="icon-left" tabindex="-1"></wpp-icon-chevron>
    <div class="page-numeric" part="page-numeric">
      <input class="idle input-page" part="input" type="number" value="1">
      <wpp-divider part="divider"></wpp-divider>
      <div class="total-pages" part="total">
        NaN
      </div>
    </div>
    <wpp-icon-chevron class="icon-end idle" part="icon-right" tabindex="0"></wpp-icon-chevron>
  </mock:shadow-root>
</wpp-pagination-select>
`;
